{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 36,
  "lineage": "5692282a-c524-30ec-26e6-7e6771b795df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0f723cd1fda97941b",
            "id": "rtb-0f723cd1fda97941b",
            "owner_id": "708646433010",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "Private_rt"
            },
            "vpc_id": "vpc-0cc1f8daa52dbaedd"
          },
          "depends_on": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0157c3849e182fcfb",
            "owner_id": "708646433010",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public_rt"
            },
            "vpc_id": "vpc-0cc1f8daa52dbaedd"
          },
          "depends_on": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c7c086f27190f0d",
            "route_table_id": "rtb-0f723cd1fda97941b",
            "subnet_id": "subnet-05369ff2840b1c6e9"
          },
          "depends_on": [
            "aws_default_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e33a69c3fe8c207",
            "route_table_id": "rtb-0f723cd1fda97941b",
            "subnet_id": "subnet-0fd0a11cbd593e6b6"
          },
          "depends_on": [
            "aws_default_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cd0a56e82d75f3b",
            "route_table_id": "rtb-0157c3849e182fcfb",
            "subnet_id": "subnet-03372c20d2e1027ce"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d08a30b59391973",
            "route_table_id": "rtb-0157c3849e182fcfb",
            "subnet_id": "subnet-0632d2abcd956f3cd"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:708646433010:subnet/subnet-05369ff2840b1c6e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.128/26",
            "id": "subnet-05369ff2840b1c6e9",
            "map_public_ip_on_launch": false,
            "owner_id": "708646433010",
            "tags": {
              "Environment": "default",
              "Name": "private-1"
            },
            "vpc_id": "vpc-0cc1f8daa52dbaedd"
          },
          "depends_on": [
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:708646433010:subnet/subnet-0fd0a11cbd593e6b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.192/26",
            "id": "subnet-0fd0a11cbd593e6b6",
            "map_public_ip_on_launch": false,
            "owner_id": "708646433010",
            "tags": {
              "Environment": "default",
              "Name": "private-2"
            },
            "vpc_id": "vpc-0cc1f8daa52dbaedd"
          },
          "depends_on": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:708646433010:subnet/subnet-03372c20d2e1027ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/26",
            "id": "subnet-03372c20d2e1027ce",
            "map_public_ip_on_launch": false,
            "owner_id": "708646433010",
            "tags": {
              "Environment": "default",
              "Name": "public-1"
            },
            "vpc_id": "vpc-0cc1f8daa52dbaedd"
          },
          "depends_on": [
            "aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:708646433010:subnet/subnet-0632d2abcd956f3cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.0.64/26",
            "id": "subnet-0632d2abcd956f3cd",
            "map_public_ip_on_launch": false,
            "owner_id": "708646433010",
            "tags": {
              "Environment": "default",
              "Name": "public-2"
            },
            "vpc_id": "vpc-0cc1f8daa52dbaedd"
          },
          "depends_on": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:708646433010:vpc/vpc-0cc1f8daa52dbaedd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-06997bd814522ee6a",
            "default_route_table_id": "rtb-0f723cd1fda97941b",
            "default_security_group_id": "sg-060091668ba629039",
            "dhcp_options_id": "dopt-909b73fb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cc1f8daa52dbaedd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f723cd1fda97941b",
            "owner_id": "708646433010",
            "tags": {
              "Name": "test_vpc"
            }
          }
        }
      ]
    }
  ]
}